==> farhan228-pak/duct_maping_charger_board_stm32_miun/MDK-ARM/MPU9250.c <==
#include "MPU9250.h"
#include "i2c.h"
#include "stm32l0xx_hal.h"
#include "user.h"

    void writeByte(uint8_t address, uint8_t subAddress, uint8_t data)
{
   uint8_t data_write[2];
   data_write[0] = subAddress;
   data_write[1] = data;
   //i2c.write(address, data_write, 2, 0);
	HAL_I2C_Master_Transmit(&hi2c2, address, &data_write[0], 2, 10);
}

    uint8_t readByte(uint8_t address, uint8_t subAddress)
{
    uint8_t data[1]; // `data` will store the register data     
    uint8_t data_write[1];
    data_write[0] = subAddress;
   // i2c.write(address, data_write, 1, 1); // no stop
	HAL_I2C_Master_Transmit(&hi2c2, address, &data_write[0], 1, 10);
   // i2c.read(address, data, 1, 0);
HAL_I2C_Master_Receive(&hi2c2, address,&data[0], 1,0);
    return data[0]; 
}

    void readBytes(uint8_t address, uint8_t subAddress, uint8_t count, uint8_t * dest)
{     
    uint8_t data[14];
    uint8_t data_write[1];
    data_write[0] = subAddress;
   // i2c.write(address, data_write, 1, 1); // no stop
		HAL_I2C_Master_Transmit(&hi2c2, address, &data_write[0], 1, 10);
    //i2c.read(address, data, count, 0); 
	HAL_I2C_Master_Receive(&hi2c2, address,&data[0], count,0);

    for(int ii = 0; ii < count; ii++) {
     dest[ii] = data[ii];
    }
}
